[project]
name = "ap4python"
version = "0.1.0"
description = "An async extension to p4python"
readme = "README.md"
authors = [
    { name = "Kristján Valur Jónsson", email = "sweskman@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "p4python>=2020.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
