[project]
name = "p4async"
version = "0.1.7"
description = "An async extension to p4python"
readme = "README.md"
authors = [
    { name = "Kristján Valur Jónsson", email = "sweskman@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "p4python>=2020.1.0",
]
keywords = ["perforce", "p4", "p4python", "asyncio", "vcs"]
classifiers = [
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kristjanvalur/p4async"
Source = "https://github.com/kristjanvalur/p4async"
Changelog = "https://github.com/kristjanvalur/p4async/blob/main/CHANGELOG.md"
Issues = "https://github.com/kristjanvalur/p4async/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=7.0",
    "pytest-asyncio>=0.22"
]

[tool.ruff]
line-length = 100
lint.select = ["I"]

[tool.mypy]
python_version = "3.11"
files = ["src"]

[[tool.mypy.overrides]]
module = ["P4"]
ignore_missing_imports = true
